<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/output_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/output_text"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintBottom_toTopOf="@id/output_Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_TextView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/output_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="insertText"
        android:text="@string/output_button"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_TextView" />

    <EditText
        android:id="@+id/input_PlainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_plainText"
        android:inputType="text"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintBottom_toTopOf="@+id/welcome_TextView"
        app:layout_constraintTop_toBottomOf="@id/newActivity_Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
 />

    <Button
        android:id="@+id/newActivity_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="newActivity"
        android:text="@string/newActivity_button"
        app:layout_constraintBottom_toTopOf="@+id/input_PlainText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>